# minidic

./: AGENTS.md  CLAUDE.md  Makefile  README.md  RELEASING.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.pi/todos/: 02b4e6a3.md  1f6d44ae.md  2868c6e5.md  2c93a814.md  342c8a22.md  7122e8c0.md  b2e45267.md  caebfe8a.md  e0abf66e.md  f0a592dd.md
src/minidic/: __init__.py  __main__.py  _version.py  audio.py  daemon.py  handlers.py  hotkey.py  inject.py  main.py  menubar.py  settings.py  text_processing.py  transcribe.py  vad.py
src/minidic/runtime/: __init__.py  config.py  process.py  state.py
tests/: conftest.py  test_daemon.py  test_hotkey.py  test_main.py  test_settings.py  test_transcribe.py  test_vad.py
