[project]
name = "minidic"
version = "0.1.0"
description = "Voice dictation for macOS"
readme = "README.md"
authors = [
    { name = "Yejun Su", email = "goofan.su@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "parakeet-mlx>=0.5.1",
    "pyobjc-framework-quartz>=12.1",
    "sounddevice>=0.5.5",
    "soxr>=1.0.0",
]

[project.scripts]
minidic = "minidic.main:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
